# SpatialClientServer

./: .gitignore  .gitmodules  ReadMe.txt  SparialOSProject.sln
Code/Game/: ActorRenderable.cpp  ActorRenderable.hpp  App.cpp  App.hpp  EngineBuildPreferences.hpp  Entity.cpp  Entity.hpp  Game.cpp  Game.hpp  Game.vcxproj  Game.vcxproj.filters  GameCommon.hpp  GameUtils.cpp  GameUtils.hpp  Main_Windows.cpp  PlayerController.cpp  PlayerController.hpp  SelfSubActor.cpp  SelfSubActor.hpp  SpatialOSClient.cpp  SpatialOSClient.hpp  View.hpp
Code/Game/SpatialOS/: SpatialOSClient.cpp  SpatialOSClient.hpp
Code/Server/: SelfSubActor.cpp  SelfSubActor.hpp  Server.vcxproj  Server.vcxproj.filters  ServerApp.cpp  ServerApp.hpp  ServerCommon.hpp  Server_main.cc  SimController.cpp  SimController.hpp  SpatialOSServer.cpp  SpatialOSServer.hpp  View.cpp  View.hpp  WorldSim.cpp  WorldSim.hpp
Code/Server/SpatialOS/: SpatialOSServer.cpp  SpatialOSServer.hpp
Code/Shared/: AIController.cpp  AIController.hpp  AbilityBase.cpp  AbilityBase.hpp  AbilityBaseDefinition.cpp  AbilityBaseDefinition.hpp  ActorBase.cpp  ActorBase.hpp  ActorBaseDefinition.cpp  ActorBaseDefinition.hpp  ControllerBase.cpp  ControllerBase.hpp  EntityBase.cpp  EntityBase.hpp  EntityBaseDefinition.cpp  EntityBaseDefinition.hpp  Shared.vcxproj  Shared.vcxproj.filters  SharedCommon.cpp  SharedCommon.hpp  SimController.cpp  SimController.hpp  View.cpp  View.hpp  Zone.cpp  Zone.hpp
Code/Submodule/Engine/Code/Engine/Core/: EngineCommon.cpp  EngineCommon.hpp  EngineUtils.cpp  EngineUtils.hpp  ErrorWarningAssert.cpp  ErrorWarningAssert.hpp  EventSystem.cpp  EventSystem.hpp  Tags.cpp  Tags.hpp  WindowContext.cpp  WindowContext.hpp
Code/Submodule/Engine/Code/Engine/Math/: AABB2.cpp  AABB2.hpp  AABB3.cpp  AABB3.hpp  Capsule3.cpp  Capsule3.hpp  Disc.cpp  Disc.hpp  FloatRange.cpp  FloatRange.hpp  Frustum.cpp  Frustum.hpp  IntRange.cpp  IntRange.hpp  (+32 more)
Run/: imgui.ini
Run/Data/: GameConfig.xml
Run/Data/Gameplay/: AbilityDefinitions.xml  ActorDefinitions.xml
Run/Data/Materials/: default_lit.mat  default_unlit.mat
Run/Data/Shaders/: alwaysDrawShader.xml  bitangent.hlsl  bitangent.xml  default_lit.xml  default_unlit.01.hlsl  default_unlit.hlsl  devShader.xml  dissolve.hlsl  dissolve.xml  dot3_lighting.hlsl  greaterDrawShader.xml  lequalWireframeShader.xml  lessOrEqualDrawShader.xml  normal.hlsl  normal.xml  shader.xml  tangent.hlsl  tangent.xml  ubo.hlsl  vbo.hlsl
SpatialOS/: default_launch.json  spatialos.json
SpatialOS/dependencies/: CMakeLists.txt
SpatialOS/schema/: CMakeLists.txt  ClientServer.schema  blank.schema
SpatialOS/snapshots/: CleanServerAPI.snapshot  WorldWithAPI.snapshot  default.snapshot
SpatialOS/workers/Managed/: CMakeLists.txt  spatialos.Managed.worker.json
(+74 files in other folders)
